bynkc/tests/fixtures/negative/285_observe_impure_with/src/demo/pay.bynk
context demo.pay {
  exports opaque { AuthId }
  type AuthId = opaque String
  capability Logger {
    fn log(msg: String) -> Effect[()]
  }
  provides Logger = NoOp {
    fn log(msg: String) -> Effect[()] { () }
  }
  service authorise {
    on call(amount: Int) -> Effect[AuthId] given Logger {
      let _ <- Logger.log("x")
      AuthId.unsafe("A")
    }
  }
}
